# cargo-contemplate

./: Cargo.toml  README.md
src/: main.rs
