[package]
name = "cargo-contemplate"
version = "0.2.2"
edition = "2021"
description = "fetch templates for stuffs"
license = "Apache-2.0"
keywords = ["templates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
clap = { version = "3.2.0", features = ["derive", "unstable-doc"] }
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
url = "2.3.1"
fs_extra = "1.2.0"
